# Ext2_Filesystem_Op

./: CMakeLists.txt  INFO.txt  Makefile  README.md  allen.sh  autorun.sh  diff_test.sh  ext2_checker.c  ext2_cp.c  ext2_ln.c  ext2_mkdir.c  ext2_restore.c  ext2_rm.c  ext2_rm_bonus.c  ext2_utils.c  ext2_utils.h  readimage  readimage.c  sample.sh  selftest.sh  st.sh  test_bash.sh
self-tester/: readme.txt
self-tester/exercises/: readimage
self-tester/solution-results/: case15-checker.img.txt  case2-cp-large.img.txt  case4-mkdir.img.txt  case6-ln-hard.img.txt
test_result/: case4-mkdir.img.txt
